tests/interpreter/logical-and-bad-types.stderr
error: expected 'Bool', got 'Number'
 --> $DIR/logical-and-bad-types.lox:1:1
  |
1 | 1 and 2;
  | ^
